Поправить события на отправку задач в событиях и поменять код в сервисах
-Обновить консьюмеры (которых пока нет для тасков)
-Обновить БД и продьюсер

--- a/source/Tasks/Tasks.csproj
+++ b/source/Tasks/Tasks.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <UserSecretsId>12f25f9d-f7a8-46ba-9315-680d6c916e0d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
