--- a/source/Accounting/Accounting.csproj
+++ b/source/Accounting/Accounting.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
